--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,42 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+    
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix: "/doc"
+    
 api:
     type: rest
     resource: "routing_api.yml" 
-homepage:
+    
+login:
     path:     /
+    defaults: { _controller: AppBundle:Security:login }
+    
+login_check:
+    path: /login_check
+    
+logout:
+    path: /logout    
+    defaults: { _controller: AppBundle:Security:logingOut }
+    
+homepage:
+    path:     /home
     defaults: { _controller: AppBundle:Default:index }
+    
+new_product:
+    path:     /products/new/
+    defaults: { _controller: AppBundle:Product:createProduct } 
+    
+list_products:
+    path:     /products/list/
+    defaults: { _controller: AppBundle:Product:listProducts }    
+    
+edit_product:
+    path:     /products/edit/{id}
+    defaults: { _controller: AppBundle:Product:edit } 
+
+delete_product:
+    path:     /products/delete/{id}
+    defaults: { _controller: AppBundle:Product:deleteProduct } 
