--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,10 +18,11 @@ security:
         
     
     access_control:
-        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/home, roles: ROLE_USER }
+        - { path: ^/products/list/, roles: ROLE_USER }
+        - { path: ^/products/new/, roles: ROLE_USER }
         - { path: ^/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/secure, roles: ROLE_USER }
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -34,7 +35,7 @@ security:
             anonymous: ~
             provider: our_db_provider
             form_login:
-                login_path: admin
+                login_path: login
                 check_path: /login_check
                 csrf_token_generator: security.csrf.token_manager
             logout:
