--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "nelmio/cors-bundle": "^1.4",
         "nelmio/api-doc-bundle": "^2.11",
         "jms/serializer-bundle": "^1.1",
-        "willdurand/faker-bundle": "^1.3"
+        "willdurand/faker-bundle": "^1.3",
+        "mashape/unirest-php": "2.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
