--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -18,12 +18,15 @@ login_check:
     path: /login_check
     
 logout:
-    path: /logout    
-    defaults: { _controller: AppBundle:Security:logingOut }
+    path: /logout
     
 homepage:
     path:     /home
     defaults: { _controller: AppBundle:Default:index }
+
+register_user:
+    path:     /user/new/
+    defaults: { _controller: AppBundle:Security:register } 
     
 new_product:
     path:     /products/new/
@@ -37,6 +40,6 @@ edit_product:
     path:     /products/edit/{id}
     defaults: { _controller: AppBundle:Product:edit } 
 
-delete_product:
+delete_product_web:
     path:     /products/delete/{id}
     defaults: { _controller: AppBundle:Product:deleteProduct } 
