--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,13 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/rest-bundle": "^2.2",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "hwi/oauth-bundle": "^0.5.3",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer-bundle": "^1.1",
+        "mashape/unirest-php": "2.*",
+        "nelmio/api-doc-bundle": "^2.11",
+        "nelmio/cors-bundle": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
@@ -32,11 +38,8 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
-        "nelmio/cors-bundle": "^1.4",
-        "nelmio/api-doc-bundle": "^2.11",
-        "jms/serializer-bundle": "^1.1",
-        "willdurand/faker-bundle": "^1.3",
-        "mashape/unirest-php": "2.*"
+        "sensio/generator-bundle": "^3.0",
+        "willdurand/faker-bundle": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
